# name_screening_tool

./: .gitignore  CLI_TEST_COMMANDS.md  EVAL_REPORT.md  IMPLEMENTATION_NOTES.md  README.md  TECHNICAL_DOCUMENTATION.md  evaluate.py  evaluate_extended.py  pyproject.toml  setup.py  test_contextual_role.txt  web_app.py
data/: nicknames.csv
src/name_screening/: __init__.py  main.py
src/name_screening/core/: __init__.py  entity_extractor.py  llm_matcher.py  matcher.py
src/name_screening/models/: matching.py
src/name_screening/utils/: explainability.py  name_parser.py
templates/: index.html
